--- a/frontend/frontend-template/src/index.css
+++ b/frontend/frontend-template/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: poppins,
+  font-family: poppins;
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
